# Launcher

./: README.md  index.html  package-lock.json  package.json
reality_launcher/: .gitignore  premake5.lua
reality_launcher/RealityLauncher/: Program.cs  premake5.lua
reality_launcher/scripts/: Setup.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/auth/: errors.rs  mod.rs  responses.rs  services.rs
src-tauri/src/cache/: mod.rs
src-tauri/src/config/: drives.rs  errors.rs  installed.rs  mod.rs
src-tauri/src/discord/: discord_rpc_utils.rs  errors.rs  mod.rs
src-tauri/src/friends/: errors.rs  mod.rs  online.rs  responses.rs
src-tauri/src/game/: errors.rs  mod.rs  responses.rs
src-tauri/src/launcher/: anticheat.rs  errors.rs  game_launcher.rs  launcher.rs  mod.rs
src-tauri/src/manifest/: chunk_data.rs  custom_fields.rs  errors.rs  file_manifest.rs  manifest_data.rs  manifest_utils.rs  mod.rs
src-tauri/src/manifest/downloader/: download_utils.rs  downloader.rs  errors.rs  mod.rs  progress_update.rs  responses.rs  verifier.rs
src/app/: app.tsx  globals.css  main.tsx
src/components/: error-modal.tsx  friend-card.tsx  friend-request-card.tsx  game-actions.tsx  game-info.tsx  install-modal.tsx  loading-screen.tsx  quick-actions.tsx  sign-in-form.tsx
src/hooks/: use-auth.ts  use-error-modal.ts  use-game-installation.ts  use-game-launcher.ts
src/launcher/: game-launcher.tsx
src/services/: auth-service.ts  discord-service.ts  (+3 more)
(+19 files in other folders)
