[package]
name = "Reality"
version = "0.0.2"
description = "Launcher for RealityFN"
authors = ["Tamely"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "reality_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
base64 = "0.22.1"
sha2 = "0.10.9"
aws-sdk-s3 = "1.96.0"
aws-credential-types = "1.2.3"
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
byteorder = "1.5.0"
flate2 = "1.1.2"
sha1 = "0.10.6"
hex = "0.4.3"
futures = "0.3.31"
aws-config = "1.8.1"
aws-smithy-runtime-api = "1.8.3"
generic-array = "1.2.0"
aws-smithy-types = "1.3.2"
tauri-plugin-dialog = "2"
sysinfo = "0.28"
winapi = { version = "0.3.9", features = ["processthreadsapi", "tlhelp32", "handleapi"] }
libloading = "0.8.8"
windows = "0.61.3"
tokio-util = "0.7.16"
discord-rich-presence = "0.2.5"
win-msgbox = "0.2.1"

